# lmk

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml  build.rs
common/schema/: event.capnp
common/src/: event_capnp.rs  lib.rs  timestamp.rs
server/: Cargo.toml
server/src/: main.rs
server/src/http_handler/: event_handler.rs  home.rs  home_handler.rs  mod.rs
server/src/rpc_impl/: event_rpc.rs  mod.rs
server/src/template_struct/: events.rs  home.rs  mod.rs
server/templates/: events.html  home.html  home.j2
server/templates/layout/: base.html
