[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
capnp = "0.19"
capnp-rpc = "0.19"
tokio = { version = "1.35.1", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
futures = "0.3.30"
