[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
capnp = "0.19"
capnp-rpc = "0.19"
tokio = { version = "1.35.1", features = [
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.10", features = ["compat"] }
futures = "0.3.30"
askama = { version = "0.12.1", features = ["with-actix-web"] }
actix-web = "4.4.1"
askama_actix = "0.14.0"
env_logger = "0.11.1"
dotenv = "0.15.0"
log = "0.4.20"
